 * New DHCP fingerprints for Aastra, LifeSize, Nortel, Polycom and Snom 
   Conferencing and VoIP, Ubuntu 11.04 and a Xerox printer
 * New controllerIp network device parameter will make it simpler to support
   wireless hardware working in bridged mode
 * Developer documentation to add Floating Network Devices support to switches
 * Minor usability improvements

Bug fixes
 * Fixed OS violations regression introduced in 2.2.0
 * Fixed Avaya/Nortel switches problems on ERS2500 / ERS4500 (at least)
 * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
 * Fixed custom VLAN assignments relying on connection_type failing on "unknown"
   nodes (#1231)
 * Fixed problematic default grace period for System scan violation
 * Fixed configurator.pl does not show interfaces without IP address (#1221)
 * Fixed issue to detect the shell prompt MeruOS 4.1 or greater (#1232)
 * Fixed issues with wireless hardware not sending a NAS-Port parameter
 * Fixed Apache configuration problems on non RHEL / CentOS platforms
 * Fixed other cases of warnings from our FreeRADIUS module

--------------------------------------------------------------------------------
Version 2.2.1 released on 2011-06-16

New Hardware Support
 * AeroHIVE AP Access Points
 * Dlink DES 3550 switch (Thanks to Olivier Roch Vilato)
 * Dlink DGS 3200 switch
 * HP ProCurve 5400 Series
 * ExtremeNetworks Summit now supports MAC Authentication and 802.1X

New Features
 * Basic WISPR support improves iPod/iPhone/iPad usability (#815)

Enhancements
 * Performance improvement for RADIUS based requests in environments with large
   conf/switches.conf files
 * Increased responsiveness of VLAN assignments by reducing the available node
   information (got rid of unused fields)
 * Nortel module now warns in the logs about a common stacking Nortel problem
 * New DHCP fingerprint for Cisco/Linksys, Aruba, 3Com switch, HTC Android, 
   Polycom, Konica Minolta MFP's and HP Printers
 * Warning avoidance